feat: Move examples to a package and re-write the buggy Parquet datasource
feat: Show usage guide in README